compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@multi_assign_with_prop.tapir.snap
---
source: compiler/src/compile.rs
expression: decompiled
input_file: compiler/src/snapshot_tests/compiler/multi_assign_with_prop.tapir
---
00000000: setpropi 20, 0
00000001: ret
00000002: ret
