compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@optimise_division_by_subtraction.tapir.snap
---
source: crates/tapir-script/compiler/src/compile.rs
expression: decompiled
input_file: crates/tapir-script/compiler/src/snapshot_tests/compiler/optimise_division_by_subtraction.tapir
---
00000000: loadk 1, 100
00000002: getprop 4, 0
00000003: loadk 6, 0
00000005: mov 2, 1
00000006: mov 1, 6
00000007: jmp 8
00000008: lt 6, 2, 4
00000009: jumpif 6
00000010: jmp 12
00000011: jmp 14
00000012: setprop 1, 0
00000013: ret
00000014: sub 5, 2, 4
00000015: loadk 2, 1
00000017: add 3, 1, 2
00000018: mov 2, 5
00000019: mov 1, 3
00000020: jmp 8
00000021: ret
