compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@really_basic_call.tapir.snap
---
source: crates/tapir-script/compiler/src/compile.rs
expression: decompiled
input_file: crates/tapir-script/compiler/src/snapshot_tests/compiler/really_basic_call.tapir
---
00000000: call 2
00000001: jmp 6
00000002: mov 1, 3
00000003: wait
00000004: ret
00000005: ret
00000006: wait
00000007: loadk 1, 3
00000009: ret
