compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@regalloc_loop.tapir.snap
---
source: crates/tapir-script/compiler/src/compile.rs
expression: decompiled
input_file: crates/tapir-script/compiler/src/snapshot_tests/compiler/regalloc_loop.tapir
---
00000000: loadk 4, 3
00000002: mov 1, 4
00000003: jmp 4
00000004: mov 3, 1
00000005: loadk 3, 1
00000007: jumpif 3
00000008: jmp 10
00000009: jmp 12
00000010: mov 2, 1
00000011: jmp 14
00000012: mov 2, 1
00000013: jmp 14
00000014: mov 1, 2
00000015: jmp 4
00000016: ret
