compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@spawn.tapir.snap
---
source: crates/tapir-script/compiler/src/compile.rs
expression: decompiled
input_file: crates/tapir-script/compiler/src/snapshot_tests/compiler/spawn.tapir
---
00000000: loadk 1, 3
00000002: loadk 2, 0
00000004: mov 4, 1
00000005: mov 5, 2
00000006: spawn 3, 2
00000007: jmp 19
00000008: wait
00000009: loadk 1, 7
00000011: loadk 2, 1
00000013: mov 4, 1
00000014: mov 5, 2
00000015: spawn 3, 2
00000016: jmp 19
00000017: ret
00000018: ret
00000019: mov 3, 1
00000020: setprop 3, 0
00000021: wait
00000022: ret
00000023: ret
