compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@spawn2.tapir.snap
---
source: compiler/src/compile.rs
expression: decompiled
input_file: compiler/src/snapshot_tests/compiler/spawn2.tapir
---
00000000: loadk 1, 1
00000002: loadk 2, 2
00000004: mov 6, 1
00000005: mov 7, 2
00000006: spawn 4, 5, 2
00000007: jmp 25
00000008: loadk 1, 0
00000010: loadk 2, 7
00000012: mov 6, 1
00000013: mov 7, 2
00000014: spawn 3, 5, 2
00000015: jmp 25
00000016: wait
00000017: wait
00000018: wait
00000019: loadk 2, 4
00000021: mov 1, 2
00000022: setprop 1, 0
00000023: ret
00000024: ret
00000025: wait
00000026: mov 3, 1
00000027: jumpif 3
00000028: jmp 30
00000029: jmp 33
00000030: wait
00000031: mov 3, 2
00000032: jmp 35
00000033: mov 3, 2
00000034: jmp 35
00000035: mov 4, 3
00000036: mov 3, 4
00000037: setprop 3, 0
00000038: wait
00000039: ret
00000040: ret
