compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@spawn_block_multiple.tapir.snap
---
source: compiler/src/compile.rs
expression: decompiled
input_file: compiler/src/snapshot_tests/compiler/spawn_block_multiple.tapir
---
00000000: stackalloc 4
00000001: spawn 2, 3, 0
00000002: jmp 7
00000003: spawn 1, 3, 0
00000004: jmp 16
00000005: ret
00000006: ret
00000007: stackalloc 4
00000008: jmp 9
00000009: getprop 2, 0
00000010: loadi 3, 1
00000011: add 1, 2, 3
00000012: setprop 1, 0
00000013: wait
00000014: jmp 9
00000015: ret
00000016: stackalloc 4
00000017: jmp 18
00000018: getprop 2, 1
00000019: loadi 3, 1
00000020: add 1, 2, 3
00000021: setprop 1, 1
00000022: wait
00000023: jmp 18
00000024: ret
