compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@spawn_block_task_handle.tapir.snap
---
source: compiler/src/compile.rs
expression: decompiled
input_file: compiler/src/snapshot_tests/compiler/spawn_block_task_handle.tapir
---
00000000: stackalloc 3
00000001: spawn 1, 2, 0
00000002: jmp 6
00000003: setglobal 1, 0
00000004: ret
00000005: ret
00000006: stackalloc 4
00000007: jmp 8
00000008: getprop 2, 0
00000009: loadi 3, 1
00000010: add 1, 2, 3
00000011: setprop 1, 0
00000012: wait
00000013: jmp 8
00000014: ret
